Updated variables template file

--- a/Ansible_AWS_provisioning/etc/variables_template.yml
+++ b/Ansible_AWS_provisioning/etc/variables_template.yml
@@ -1,10 +1,19 @@
 ---
 # Static hard-coded variables
 ec2_al2_image_id: ami-02f5781cba46a5e8a # Current AMI ID for Amazon Linux 2
+my_ip:
+route53_zone:
 vpc_id:
-vpc_subnet_id:
+vpc_subnet_id_1:
+vpc_subnet_id_2:
 # Dynamic variables which get updated automatically from playbooks
-ec2_staging_instance_id:
-ec2_staging_ami_id:
 ec2_key_name:
 ec2_sg_app_id:
+ec2_sg_lb_id:
+ec2_staging_ami_id:
+ec2_staging_instance_id:
+ec2_staging_instance_public_dns:
+elb_dns:
+elb_tg_arn:
+elb_zone_id:
+route53_zone_id:
