--- a/Ansible_AWS_provisioning/6_provision_production.yml
+++ b/Ansible_AWS_provisioning/6_provision_production.yml
@@ -1,11 +1,7 @@
 ---
 - name: Provision an Auto Scaling Group with launch template and scaling policy
-  #vars:
-  #  ansible_ssh_private_key_file: etc/ec2_key.pem
-  #hosts: tag_Environment_Staging
   hosts: localhost
   connection: local
-  #remote_user: ec2-user
   tasks:
 
   - name: Import variables
@@ -13,7 +9,7 @@
 
   - name: Create launch template
     ec2_launch_template:
-      name: simple-webapp
+      name: "{{ app_name }}"
       image_id: "{{ ec2_staging_ami_id }}"
       key_name: "{{ ec2_key_name }}"
       instance_type: t2.micro
@@ -21,19 +17,18 @@
 
   - name: Create Auto Scaling group
     ec2_asg:
-      name: simple-webapp
+      name: "{{ app_name }}"
       target_group_arns: "{{ elb_tg_arn }}"
       vpc_zone_identifier:
       - "{{ vpc_subnet_id_1 }}"
       - "{{ vpc_subnet_id_2 }}"
       launch_template:
-        launch_template_name: simple-webapp
+        launch_template_name: "{{ app_name }}"
       min_size: 1
       max_size: 3
       tags:
       - Name: Production
       - Environment: Production
-      #replace_all_instances: yes
       health_check_period: 60
 
   # Unfortunately, target tracking policies are not yet supported in the Ansible modules so we have to use the AWS CLI for the time being.
@@ -41,43 +36,3 @@
   - name: Create scaling policy
     command:
       /usr/local/bin/aws autoscaling put-scaling-policy --policy-name simple-webapp --auto-scaling-group-name simple-webapp --policy-type TargetTrackingScaling --target-tracking-configuration file://etc/scaling_policy_config.json --estimated-instance-warmup 60
-      
-
-
-
-
-
-
-
-
-
-
-
-  - name: Halt playbook
-    meta: end_play
-
-
-
-
-  - name: Provision Target Group
-    elb_target_group:
-      name: simple-webapp
-      protocol: http
-      port: 8080
-      vpc_id: "{{ vpc_id }}"
-      state: present
-    #register: target_group
-
-  - name: Provision Application Load Balancer
-    elb_application_lb:
-      name: simple-webapp
-      security_groups: "{{ ec2_sg_lb_id }}"
-      subnets:
-      - "{{ vpc_subnet_id_1 }}"
-      - "{{ vpc_subnet_id_2 }}"
-      listeners:
-      - Protocol: HTTP
-        Port: 80
-        DefaultActions:
-        - Type: forward
-          TargetGroupName: simple-webapp
