--- a/Ansible_AWS_provisioning/5_provision_tg_elb.yml
+++ b/Ansible_AWS_provisioning/5_provision_tg_elb.yml
@@ -1,19 +1,15 @@
 ---
 - name: Provision a Target Group and an Application Load Balancer
-  #vars:
-  #  ansible_ssh_private_key_file: etc/ec2_key.pem
-  #hosts: tag_Environment_Staging
   hosts: localhost
   connection: local
-  #remote_user: ec2-user
   tasks:
 
   - name: Import variables
     include_vars: etc/variables.yml
 
-  - name: Provision Target Group
+  - name: Create Target Group
     elb_target_group:
-      name: simple-webapp
+      name: "{{ app_name }}"
       protocol: http
       port: 8080
       vpc_id: "{{ vpc_id }}"
@@ -27,9 +23,9 @@
       regex: '^elb_tg_arn:'
       line: "elb_tg_arn: {{ target_group.target_group_arn }}"
 
-  - name: Provision Application Load Balancer
+  - name: Create Application Load Balancer
     elb_application_lb:
-      name: simple-webapp
+      name: "{{ app_name }}"
       security_groups: "{{ ec2_sg_lb_id }}"
       subnets:
       - "{{ vpc_subnet_id_1 }}"
@@ -39,7 +35,7 @@
         Port: 80
         DefaultActions:
         - Type: forward
-          TargetGroupName: simple-webapp
+          TargetGroupName: "{{ app_name }}"
         Rules:
         - Conditions: 
           - Field: host-header
