Cleanup variables etc.

--- a/Ansible_AWS_provisioning/etc/variables_template.yml
+++ b/Ansible_AWS_provisioning/etc/variables_template.yml
@@ -1,13 +1,13 @@
 ---
-# Static hard-coded variables
+# Static hard-coded variables (change these as needed)
+app_name: simple-webapp # Can be changed if using with a different app
 ec2_al2_image_id: ami-02f5781cba46a5e8a # Current AMI ID for Amazon Linux 2
-my_ip:
-route53_zone:
-vpc_id:
-vpc_subnet_id_1:
-vpc_subnet_id_2:
+my_ip: 1.2.3.4 # IP of home or work address to restrict access in security rules
+route53_zone: myapp.com # Name of DNS domain set up in Route 53 for this app
+vpc_id: vpc-xxxxxxxx # VPC ID for use with this app
+vpc_subnet_id_1: subnet-xxxxxxxx # Main subnet for use with this app
+vpc_subnet_id_2: subnet-xxxxxxxx # Secondary subnet, additionally required for ELB
 # Dynamic variables which get updated automatically from playbooks
-ec2_key_name:
 ec2_sg_app_id:
 ec2_sg_lb_id:
 ec2_staging_ami_id:
@@ -16,4 +16,3 @@ ec2_staging_instance_public_dns:
 elb_dns:
 elb_tg_arn:
 elb_zone_id:
-route53_zone_id:
