--- a/Ansible_AWS_provisioning/provision_production.yml
+++ b/Ansible_AWS_provisioning/provision_production.yml
@@ -11,9 +11,10 @@
     ec2_launch_template:
       name: "{{ app_name }}"
       image_id: "{{ ec2_staging_ami_id }}"
-      key_name: "{{ ec2_key_name }}"
+      key_name: "{{ app_name }}"
       instance_type: t2.micro
       security_group_ids: sg-03328743982d79924
+    when: ec2_staging_ami_id
 
   - name: Create Auto Scaling group
     ec2_asg:
