--- a/Ansible_AWS_provisioning/provision_staging.yml
+++ b/Ansible_AWS_provisioning/provision_staging.yml
@@ -10,7 +10,7 @@
   - name: Launch Staging instance
     ec2_instance:
       name: Staging
-      key_name: "{{ ec2_key_name }}"
+      key_name: "{{ app_name }}"
       vpc_subnet_id: "{{ vpc_subnet_id_1 }}"
       instance_type: t2.micro
       security_group: "{{ ec2_sg_app_id }}"
