--- a/Ansible_AWS_provisioning/provision_tg_elb.yml
+++ b/Ansible_AWS_provisioning/provision_tg_elb.yml
@@ -16,6 +16,7 @@
       state: present
       modify_targets: no
     register: target_group
+    when: ec2_sg_lb_id
 
   - name: Update variables file with Target Group ARN
     lineinfile:
