--- a/Ansible_AWS_provisioning/etc/variables_template.yml
+++ b/Ansible_AWS_provisioning/etc/variables_template.yml
@@ -3,7 +3,7 @@
 app_name: simple-webapp # Can be changed if using with a different app
 ec2_al2_image_id: ami-02f5781cba46a5e8a # Current AMI ID for Amazon Linux 2
 my_ip: 1.2.3.4 # IP of home or work address to restrict access in security rules
-route53_zone: myapp.com # Name of DNS domain set up in Route 53 for this app
+route53_zone: yourdomain.com # Name of DNS domain set up in Route 53 for this app
 vpc_id: vpc-xxxxxxxx # VPC ID for use with this app
 vpc_subnet_id_1: subnet-xxxxxxxx # Main subnet for use with this app
 vpc_subnet_id_2: subnet-xxxxxxxx # Secondary subnet, additionally required for ELB
